# Taskera-AI

./: .dockerignore  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
.github/workflows/: deploy.yml
Backend/: .env  main.py  requirements.txt
Backend/app/agents/: controller_agent.py  knowledge_agent.py  services_agent.py  tools_agent.py
Backend/app/core/: config.py  logger.py  memory_manager.py  utils.py
Backend/app/routes/: api.py
Backend/app/services/: rag_service.py  scheduler.py  scheduler_service.py
Backend/data/: ahmad.md
Frontend/: index.html
Frontend/src/css/: style.css
Frontend/src/js/: main.js
app/: mcp_client.py  mcp_server.py
app/agents/: controller_agent.py  google_agent.py  knowledge_agent.py  services_agent.py
app/core/: config.py  context.py  crud.py  logger.py  memory_manager.py
app/impl/: google_tools_impl.py  knowledge_agent_impl.py  ocr_service_impl.py  services_agent_impl.py  tools_agent_impl.py
app/routes/: google_auth.py
app/services/: file_handler.py  rag_service.py  scheduler.py
backend/: .gitignore  Dockerfile  README.md  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  main.py  package-lock.json  pyproject.toml  requirements.txt
backend/app/: mcp_client.py  mcp_server.py
backend/app/agents/: controller_agent.py  google_agent.py  knowledge_agent.py  services_agent.py  tools_agent.py
backend/app/core/: agent.py  config.py  context.py  conversations.py  crud.py  database.py  file_handler.py  logger.py  memory_manager.py  session_manager.py
backend/app/impl/: google_tools_impl.py  knowledge_agent_impl.py  ocr_service_impl.py  services_agent_impl.py  tools_agent_impl.py
backend/app/routes/: api.py  google_auth.py  voice_routes.py
backend/app/services/: file_handler.py  ocr_service.py  rag_service.py  rag_system.py  scheduler.py  scheduler_service.py  voice_service.py
backend/app/tools/: calculator_tool.py  calender_tool.py  image_ocr_tool.py  news_tool.py  summarize_tool.py  translator_tool.py  weather_tool.py  web_tools.py
chroma_db/bash-dev/: chroma.sqlite3
frontend/: index.html  package-lock.json
frontend/src/css/: style.css
frontend/src/js/: main.js
